// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URLField should match the previous snapshot 1`] = `
<div
  className="form-group"
>
  <div
    className="col-sm-12"
  >
    <label
      className="pseudo-hidden"
      htmlFor="url"
    >
      URL
    </label>
    <input
      autoFocus={true}
      className="form-control"
      id="url"
      placeholder="https://example.com"
      type="text"
    />
  </div>
</div>
`;

exports[`URLField should match the previous snapshot with invalid field state 1`] = `
<div
  className="form-group has-error"
>
  <div
    className="col-sm-12"
  >
    <label
      className="pseudo-hidden"
      htmlFor="url"
    >
      URL
    </label>
    <input
      autoFocus={true}
      className="form-control"
      id="url"
      placeholder="https://example.com"
      type="text"
    />
  </div>
</div>
`;
